--- a/install
+++ b/install
@@ -1,5 +1,3 @@
 #!/usr/bin/env bash
-sudo apt install software-properties-common
-sudo apt-add-repository --yes --update ppa:ansible/ansible
-sudo apt install ansible
-
+# maybe need to install brew first
+brew install ansible
